fix(ui) Fix x overflow.

--- a/hub/ui/static/style/main.css
+++ b/hub/ui/static/style/main.css
@@ -62,6 +62,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 *:focus {
@@ -80,12 +81,14 @@ html {
 }
 
 body {
+    --body--gutter: var(--space);
+
     display: grid;
     grid-template: "header"
                    "main";
     grid-template-rows: auto 1fr;
     margin: 0 auto;
-    padding: 0 var(--space);
+    padding: 0 var(--body--gutter);
     min-height: 100%;
     max-width: 50rem;
 
@@ -105,7 +108,10 @@ body {
     content: '';
     position: absolute;
     z-index: -1;
-    inset: 0 calc(-1 * var(--space-large));
+    top: 0;
+    right: calc(-1 * var(--body--gutter));
+    bottom: 0;
+    left: calc(-1 * var(--body--gutter));
     background: var(--color-light-000-transparent);
 }
 
